(lang dune 3.12)

(name ocamluarena)

(generate_opam_files true)

(source
 (github kenranunderscore/ocamluarena))

(authors "Johannes Maier")

(maintainers "Johannes Maier")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocamluarena)
 (synopsis "wip")
 (description "work in progress")
 (depends ocaml dune ppx_deriving tsdl tsdl-image ocaml-lua alcotest)
 (tags
  (topics "to describe" your project)))
